fix selection box text alignment

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1120,6 +1120,10 @@ textarea.materialize-textarea+label:after {
   text-align: center;
 }
 
+.rms-item {
+  text-align: left;
+}
+
 .icon-fade-in {
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein 2s; /* Firefox < 16 */
